Don't merge. New boards.

--- a/platformio-user.ini
+++ b/platformio-user.ini
@@ -1,14 +1,19 @@
 [platformio]
 default_envs = d1_mini, d1_mini_pro, esp32c3_mini, esp32s3_mini
 
+; [common]
+; build_flags = 
+;     -j4
+
 ; boards
 ; https://registry.platformio.org/platforms/platformio/espressif32/boards
 
 [env:d1_mini]
-platform = espressif8266@4.2.0
+; platform = espressif8266@4.2.0
+platform = espressif8266
 framework = arduino
 board = d1_mini
-board_build.ldscript = eagle.flash.4m2m.ld
+; board_build.ldscript = eagle.flash.4m2m.ld
 build_flags = ${common.build_flags} -D AMS_REMOTE_DEBUG=1
 lib_ldf_mode = off
 lib_compat_mode = off
@@ -17,10 +22,11 @@ lib_ignore = ${common.lib_ignore}
 extra_scripts = ${common.extra_scripts}
 
 [env:d1_mini_pro]
-platform = espressif8266@4.2.0
+; platform = espressif8266@4.2.0
+platform = espressif8266
 framework = arduino
-board = d1_mini
-board_build.ldscript = eagle.flash.4m2m.ld
+board = d1_mini_pro
+; board_build.ldscript = eagle.flash.4m2m.ld
 build_flags = ${common.build_flags} -D AMS_REMOTE_DEBUG=1
 lib_ldf_mode = off
 lib_compat_mode = off
